Adding media queries and scroll reveal

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@
 html{
     /* 10 px baseline */
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -452,4 +453,124 @@ i{
 .underline{
     text-decoration: underline;
 }
+
 /* Media queries */
+
+@media screen and (min-width: 400px){
+    .btn-group{
+        flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 768px){
+    .showcase-container,
+    .popular-destinations-container,
+    .plan-trip-container{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+
+    .order-1{
+        order: 0;
+    }
+
+    .order-2{
+        order: 1;
+    }
+
+    .image-box{
+        min-height: 35rem;
+    }
+
+    .beach-data-inner{
+        padding: 1.5rem;
+    }
+
+    .secondary-grid{
+        grid-template-columns: repeat(2, 1fr);
+        grid-column: 1/-1;
+    }
+
+    .image-box-right{
+        grid-column: span 2;
+    }
+
+    .image-box-right .beach-data-inner{
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1000px){
+    .nav-mobile{
+        background-color: transparent;
+        position: initial;
+        width: initial;
+        padding: initial;
+        z-index: initial;
+        transform: initial;
+        transition: initial;
+    }
+
+    .nav .list{
+        flex-direction: row;
+    }
+
+    .list-link::after,
+    .list-link.current::after{
+        top: initial;
+        right: initial;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: -1rem;
+    }
+
+    .sm-screen-hidden{
+        display: block !important;
+    }
+
+    .lg-screen-hidden{
+        display: none;
+    }
+
+    .nav.active .nav-mobile{
+        transform: initial;
+    }
+
+    .header::before{
+        display: none;
+    }
+
+    .showcase-container,
+    .popular-destinations-container,
+    .plan-trip-container{
+        gap: 10rem;
+    }
+
+    .showcase .image-box{
+        min-height: 35rem;
+    }
+
+    .secondary-grid{
+        grid-template-columns: 2fr repeat(6, 1fr) 2fr;
+    }
+
+    .image-box-left{
+        grid-column: 1/3;
+    }
+
+    .image-box-center{
+        grid-column: 3/7;
+    }
+
+    .image-box-right{
+        grid-column: 7/-1;
+    }
+
+    .width-50{
+        width: 50%;
+    }
+
+    .image-box-right .beach-data-inner{
+        width: 100%;
+    }
+}
